correct responsive on small device for restaurant image and menu category

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -16,6 +16,10 @@
 }
 
 @media (max-width: 830px) {
+  .menu > div {
+    justify-content: center;
+    align-items: center;
+  }
   .basket-small {
     display: flex;
   }
